--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 logs
 *.log
 npm-debug.log*
+.DS_Store
 
 # Runtime data
 pids
@@ -33,3 +34,5 @@ node_modules
 # Optional REPL history
 .node_repl_history
 package-lock.json
+
+examples-dist
