--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-emotion-rename",
-  "version": "1.0.0-beta.17",
+  "version": "1.0.0-beta.18",
   "description": "Babel plugin to rename old Emotion 9 import to new Emotion 10+ import",
   "main": "lib/index",
   "scripts": {
@@ -16,7 +16,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/laat/babel-plugin-transform-rename-import.git"
+    "url": "https://github.com/antonybudianto/babel-plugin-emotion-rename.git"
   },
   "dependencies": {
     "@babel/template": "7.18.10"
@@ -29,6 +29,7 @@
     "@babel/register": "^7.0.0",
     "@babel/traverse": "^7.0.0",
     "assert-simple-tap": "^3.0.0",
+    "eslint": "^8.28.0",
     "npm-run-all": "^4.0.2",
     "prettier": "^2.0.1"
   },
