--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Babel plugin to rename old Emotion 9 import to new Emotion 10+ import",
   "main": "lib/index",
   "scripts": {
-    "build": "babel --config-file=./babel-main.config.js src/. -d lib/. --ignore=spec.js",
+    "build": "babel --extensions=.ts --config-file=./babel-main.config.js src/. -d lib/. --ignore=spec.js",
     "test:babel": "node src/index.spec.js",
     "tmp": "babel --config-file=./babel-example.config.js examples/src/. -d examples/out/.",
     "test": "npm-run-all test:*",
@@ -22,16 +22,19 @@
     "@babel/template": "7.18.10"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@babel/traverse": "^7.0.0",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
+    "@babel/node": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/register": "^7.18.9",
+    "@babel/traverse": "^7.20.5",
+    "@typescript-eslint/parser": "^5.45.0",
     "assert-simple-tap": "^3.0.0",
     "eslint": "^8.28.0",
     "npm-run-all": "^4.0.2",
-    "prettier": "^2.0.1"
+    "prettier": "^2.0.1",
+    "typescript": "^4.9.3"
   },
   "files": [
     "lib"
