handle require default

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "babel-plugin-emotion-rename",
-  "version": "1.0.0-beta.23",
+  "version": "1.0.0-beta.24",
   "description": "Babel plugin to rename old Emotion 9 import to new Emotion 10+ import",
   "main": "lib/index",
   "scripts": {
     "build": "babel --extensions=.ts --config-file=./babel-main.config.js src/. -d lib/. --ignore=spec.js",
     "test:babel": "node src/index.spec.js",
-    "tmp": "babel --config-file=./babel-example.config.js examples/src/c-moderncase.js -d examples/out/.",
+    "tmp": "babel --config-file=./babel-example.config.js examples/src/. -d examples/out/.",
     "test": "npm-run-all test:*",
     "prepublish": "npm run build"
   },
